--- a/client/assets/scss/console/page.scss
+++ b/client/assets/scss/console/page.scss
@@ -11,4 +11,24 @@
     padding: 20px 20px 100px;
   }
 
+  .el-breadcrumb {
+    padding-left: 10px;
+    line-height: 15px;
+    position: relative;
+    height: 18px;
+    border-left: 2px #49a9ee solid;
+    margin-bottom: 32px;
+
+    &::after {
+      content: "";
+      display: block;
+      height: 1px;
+      width: 100%;
+      background: rgba(0,0,0,.2);
+      position: absolute;
+      top: 32px;
+      left: -2px;
+    }
+  }
+
 }
