--- a/client/assets/scss/console/warpper.scss
+++ b/client/assets/scss/console/warpper.scss
@@ -162,7 +162,7 @@
           //height: inherit;
           border-right: 0;
           
-          overflow-x: hidden;
+          //overflow-x: hidden;
           //height: 100%;
   
           .iconfont {
