--- a/client/assets/scss/passport/warpper.scss
+++ b/client/assets/scss/passport/warpper.scss
@@ -38,6 +38,21 @@
               color: #fff;
               font-size: 16px;
               margin-right: 32px;
+
+              &.console {
+                border: 1px solid #fff;
+                border-radius: 6px;
+                height: 32px;
+                line-height: 30px;
+                margin-top: 4px;
+                padding: 4px 15px;
+                margin-right: 24px;
+                font-family: PingFang SC,Helvetica Neue,Helvetica,Hiragino Sans GB,Microsoft YaHei,Arial,sans-serif;
+
+                &:hover {
+                  background-color: #77e3f7ba;
+                }
+              }
             }
           }
         }
@@ -93,6 +108,7 @@
           color: rgba(254,254,254,1);
           text-shadow: 0px 4px 79px rgba(0, 0, 0, 0.18);
           margin: 30px 0 0;
+          font-weight: 300;
         }
       }
 
@@ -333,6 +349,10 @@
 
         .landing-body {
           margin-top: 0;
+
+          form {
+            padding: 10px 14px;
+          }
         }
 
         .landing-activity {
