update task scripts .

--- a/client/assets/scss/console/page.scss
+++ b/client/assets/scss/console/page.scss
@@ -18,6 +18,7 @@
     height: 18px;
     border-left: 2px #49a9ee solid;
     margin-bottom: 32px;
+    min-width: max-content;
 
     &::after {
       content: "";
