--- a/client/assets/scss/console/page.scss
+++ b/client/assets/scss/console/page.scss
@@ -32,4 +32,59 @@
     }
   }
 
+  .form-container {
+    padding: 0 30px;
+    font-family: Lantinghei;
+    color: #444242;
+    max-width: 960px;
+    margin: auto;
+    margin-top: 80px;
+    min-width: 890px;
+
+    .el-tree-node__content {
+      height: 36px;
+    }
+
+    .el-form {
+      margin: 40px auto auto;
+
+      .el-form-item {
+        margin-bottom: 28px;
+      }
+
+      .el-form-item__label {
+        padding-right: 20px;
+        color: #777;
+      }
+
+      .el-input__inner {
+        border-radius: 0;
+      }
+
+      .el-textarea__inner {
+        border-radius: 0;
+      }
+
+      .el-button {
+        border-radius: 0;
+      }
+
+      .el-button--primary {
+        width: 120px;
+      }
+
+      .el-transfer__buttons {
+
+        .el-button {
+          border-radius: 50%;
+        }
+  
+        .el-button--primary {
+          width: auto;
+        }
+
+      }
+    }
+  }
+
 }
