--- a/client/assets/scss/console/page.scss
+++ b/client/assets/scss/console/page.scss
@@ -32,6 +32,18 @@
     }
   }
 
+  .el-table {
+    font-family: 'Comic Sans MS';
+
+    .cell {
+      overflow: inherit;
+    }
+  }
+
+  .el-pagination__jump .el-input__inner {
+    border-radius: 0;
+  }
+
   .form-container {
     padding: 0 30px;
     font-family: Lantinghei;
@@ -85,6 +97,95 @@
 
       }
     }
+  }
+
+  .baseinfo {
+    padding-top: 4px;
+    //width: 520px;
+    padding-right: calc(100% - 540px);
+    padding-left: 14px;
+    position: relative;
+
+    h5 {
+      font-size: 15px;
+      font-weight: 500;
+      line-height: 1.1;
+      color: #606266;
+      margin-top: 10px;
+      margin-bottom: 10px;
+    }
+
+    .avatar {
+      padding: 10px 0 30px 120px;
+      display: flex;
+
+      img {
+        width: 120px;
+        height: 120px;
+        border-radius: 60px;
+      }
+
+      ul {
+        list-style-type: none;
+
+        li {
+          color: #606266;
+          line-height: 1.8;
+        }
+      }
+    }
+
+    .el-form-item {
+
+      span.label {
+        color: #606266;
+      }
+      
+      .el-form-item__label {
+        font-size: 13px;
+        padding-right: 20px;
+        width: 120px;
+      }
+
+      .el-form-item__content {
+        margin-left: 120px;
+      }
+
+      .el-input__inner {
+        border-radius: 0;
+      }
+
+      .el-cascader-menu__item {
+        padding-right: 36px;
+      }
+    }
+
+    .el-button {
+      border-radius: 0;
+      //width: 100%;
+    }
+  }
+
+  .submit-box {
+    position: fixed;
+    //background-color: #f6c69933;
+    //border-top: 1px #ff572266 dashed;
+    background-color: rgba(244, 244, 244, 0.81);
+    border-top: 1px rgba(154, 153, 153, 0.4) dashed;
+    width: 100%;
+    height: 70px;
+    bottom: -70px;
+    margin-left: -35px;
+    padding: 15px 40px;
+    transition: all .3s;
+    //padding-left: 156px;
+    opacity: 0;
+    z-index: 1000;
+  }
+
+  .is-show {
+    bottom: 0;
+    opacity: 1;
   }
 
 }
